# repo-doctor

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-hooks.yaml  .taplo.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  SECURITY.md  _typos.toml  action.yml  deny.toml  justfile  release-plz.toml  repo-doctor.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: pull_request_template.md  repo-doctor-matcher.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container.yml  release-plz.yml  release.yml
assets/: README.md
docs/: agent-skills.md  ai.md  examples.md  installation.md  release-packaging.md  release.md  report-contract.md  repository-settings.md  roadmap.md  rules.md  troubleshooting.md
packaging/binstall/: README.md
packaging/homebrew/: repo-doctor.rb
packaging/npm/: package-lock.json  package.json
packaging/npm/scripts/: install.js
packaging/scoop/: repo-doctor.json
packaging/winget/: README.md
scripts/: distribution-smoke.sh  install.ps1  install.sh  new-from-template.sh  profile-smoke.sh  release-preflight.sh  update-packaging-checksums.sh
skills/repo-doctor/: SKILL.md
src/: ai.rs  checks.rs  config.rs  core.rs  github.rs  guard.rs  lib.rs  main.rs  profiles.rs  report.rs
tests/: cli.rs  trycmd.rs
tests/cmd/: check-json.toml  check.toml
