[package]
name = "repo-doctor"
version = "0.1.0"
edition = "2024"
authors = [ "Kota Ono" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kota-Ohno/repo-doctor"
description = "A small CLI that checks repository hygiene."
readme = "README.md"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = [ "derive" ] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.150"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = [ "env-filter" ] }
yaml-rust2 = "0.11.0"

[dev-dependencies]
assert_cmd = "2.2.2"
insta = "1.47.2"
predicates = "3.1.4"
tempfile = "3.27.0"
trycmd = "1.2.0"
